(feature) enable admin to set coach and student_spaces for virtual workshops
- add coach_spaces and student_spaces in presenters,
- remove attending_and_available_x_spots from virtual_workshop_presenter as it can now be handled entirely by workshop_presenter
- extract text to locale
- use workshop `to_s` to print name (Workshop or Virtual Workshop)
- use WorkshopPresenter `address` method in views, no need to setup address
separately in controllers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -578,6 +578,8 @@ en:
         slack_channel_link: 'Right click the Slack channel to get the link'
         host: 'Required by physical workshops but not supported for virtual workshops'
         description: 'Supports HTML'
+        coach_spaces: Available coach spaces
+        student_spaces: Available student spaces
     labels:
       terms_and_conditions_form:
         terms: 'I have read codebar''s Code of Conduct and agree with all of its terms.'
