(feature) ensure correct invitations are sent out for Virtual workshops for both students and coaches.
- add new email templates 
- minor spec improvements to invitation_manager

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,6 +82,11 @@ en:
         subject: "A spot just became available"
       waiting_list_reminder:
         subject: "Reminder: you're on the codebar waiting list (%{date_time})"
+      virtual:
+        invite_coach:
+          subject: "Virtual Workshop Coach Invitation %{date_time}"
+        invite_student:
+          subject: "Virtual Workshop Invitation %{date_time}"
   workshop:
     title: Workshop at %{host} - %{date}
     virtual:
