Simplify donation checkbox i18n label
Keys named `html` are marked as HTML safe[1]. This change pushes the
HTML rendering into the i18n translation files and merges the two i18n
values into one.

[1]: https://guides.rubyonrails.org/v4.2/i18n.html#using-safe-html-translations

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -366,8 +366,8 @@ de:
         salary: der Job ein angemessenes Gehalt bietet
         short: "der Eintrag kurz und auf den Punkt ist"
         approval_info: "*Nach dem Abschicken wird der Job sichtbar sobald er geprüft und bestätigt wurde."
-        pay: You have made the required payment of £50 through %{link}
-        donation: a donation
+        pay: 
+          html: You have made the required payment of £50 through <a href="%{link}">a donation</a>.
         button:
           pay: Make a payment
       edit:
