--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -455,8 +455,8 @@ en:
         short: "It's short and to the point"
         approval_info: "*Once submitted, a job will be visible once it has been reviewed and approved."
         optional_details_message: "The information below is only required if you want this job post to be shared with Google Search UK."
-        pay: You have made the required payment of £50 through %{link}
-        donation: a donation
+        pay: 
+          html: You have made the required payment of £50 through <a href="%{link}">a donation</a>.
         button:
           pay: Make a payment
       edit:
