--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -670,6 +670,7 @@ en:
     slack_html: https://slack.codebar.io
     discord_invitation: https://discord.gg/Eru89Rk
   donation_platforms:
+    title: "How to support us"
     donation_form:
       title: "Use the donation page"
       text: "Support us with a one-time donation through the donation form on our website."
