--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -359,7 +359,7 @@
         none: You have no pending job posts.
       new:
         title: List a job
-        description: "Our aim is to be the one stop shop for junior developer roles! All jobs featured on our jobs board fall under the following three categories; paid internships, apprenticeships or junior developer roles. We will not share jobs that are looking for senior, mid-weight, or "junior developer with 2 years of industry experience". Each job that is submitted will be approved by the codebar team before appearing on the job board."
+        description: "Our aim is to be the one stop shop for junior developer roles! All jobs featured on our jobs board fall under the following three categories; paid internships, apprenticeships or junior developer roles. We will not share jobs that are looking for senior, mid-weight, or junior developer with 2 years of industry experience. Each job that is submitted will be approved by the codebar team before appearing on the job board."
         rules_intro: "Before posting make sure that:"
         details: Your post details the work that will have to be undertaken
         suitability: "It's suitable for people looking for Internships and Junior roles that will enable them to build up their career"
