--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -638,6 +638,8 @@ en:
       sponsor:
         avatar: The avatar is displayed in sponsors and on the event pages.
         accessibility_info: Is the office on the second floor? Is there a lift? How can someone with a handicap get there.
+        contacts:
+          mailing_list_consent: Adds contact to sponsors mailing list and  triggers email enabling contact to self opt-out.
       workshop:
         slack_channel: 'Create a workshop specific channel in the codebar Slack. This is the place you will use for socialising and sharing details about the workshop.'
         slack_channel_link: 'Right click the Slack channel to get the link'
