--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -47,7 +47,7 @@ de:
         precision: 0
         format: '%u%n'
   homepage:
-    intro: "<strong>codebar</strong> is a non-profit initiative that facilitates the growth of a diverse tech community by running regular programming workshops."
+    intro: "<strong>codebar</strong> is a charity that facilitates the growth of a diverse tech community by running free regular programming workshops for minority groups in tech."
     explanation: "Unser Ziel ist unterrepräsentierten Menschen zu programmieren in einer sicheren und kollaborative Umgebung lernen und erweitern ihre Karrierechancen zu ermöglichen. Um dies zu erreichen betreiben wir kostenlose regelmäßige Workshops, regelmäßige Einzelveranstaltungen und versuchen, die Möglichkeiten für unsere Schüler die Technologie und Programmierung zugänglicher zu schaffen."
     participate:
       students_title: "Students"
@@ -56,7 +56,7 @@ de:
       students_button: "Sign up as a student"
       coaches_title: "Coaches"
       coaches_explanation_p1: "We encourage new students to work on our HTML/CSS, JavaScript, Ruby, Python or Git <a href='http://tutorials.codebar.io'>tutorials</a>. We also help them understand programming concepts."
-      coaches_explanation_p2: "Therefore  are always on the lookout for more developers to join our community and help coach at our workshops."
+      coaches_explanation_p2: "Therefore we are always on the lookout for more developers to join our community and help coach at our workshops."
       coaches_button: "Sign up as a coach"
       workshop_title: "Workshops"
       workshop_explanation_p1: "We are hosted by some amazing companies who support our cause. Our normal format is 30 minutes of socialising with food and drink, followed by a lightning talk then coding."
@@ -504,7 +504,7 @@ de:
     title: "How to support us"
     donation_form:
       title: "Use the donation page"
-      text: "Support us with a one-time donation through the donation form on our website."
+      text: "Support us with one-time or regular donation through the donation form on our website."
     amazon_smile:
       title: "Amazon Smile"
       text: "Pick us as your charitable organisation while shopping on Amazon. This allows us to receive 0.5% of the net purchase price of eligible purchases as a donation."
