Adds copy about adding job to newsletter to new job page

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -346,6 +346,7 @@ fr:
     select_tutorial: '- Select Tutorial -'
     request: 'How did you find the workshop?'
     suggestions: "Was there something you didn't like? What can we do to improve your experience?"
+    newsletter: "For an additional <strong>£250</strong> you can have your job listing featured in our newsletter and made available to an audience of over 10000 students and coaches. To find out more details and when our next newsletter is due send us an email at <a href='mailto:hello@codebar.io'>hello@codebar.io</a>."
   member:
     jobs:
       title: My jobs
