Manage contact mailing list subscription
- An admin can subscribe a contact to the mailing list
- A contact can manage their subscription preferences with email link
- An admin can view a list of all contacts and their subscription preferences

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -90,6 +90,7 @@ de:
     feedback_saved: "Vielen Dank für dein Feedback!"
     feedback_not_found: "Sie haben bereits ein Feedback eingereicht."
     updated_note: "Aktualisierung erfolgreich."
+    invalid_session: 'Your session is invalid'
     invitations:
       meeting:
         cancel: "Thanks for letting us know you can't make it."
