--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -369,7 +369,7 @@ fr:
         short: "It's short and to the point"
         approval_info: "*Once submitted, a job will be visible once it has been reviewed and approved."
         pay:
-          html: You have made the required payment of £50 through <a href="%{link}">a donation</a>.
+          html: You have made the <a href="%{link}">required payment of £50</a>.
         button:
           pay: Make a payment
       edit:
