add link to codebar stories blog in footer

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -109,6 +109,7 @@ de:
     becoming_sponsor: "Sponsor werden"
     faq: "Häufig gestellte Fragen"
     blog: "Blog"
+    codebar_stories: "codebar Stories"
   dashboard:
     join_workshops_in: "Komm zu unseren <i>kostenlosen</i> Workshops in"
     workshops_goal: "um sich mit den Programmier- und Webentwicklungsgrundlagen vertraut zu machen."
