--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -172,6 +172,7 @@ en:
     becoming_sponsor: "Becoming a sponsor"
     faq: "FAQ"
     blog: "Blog"
+    codebar_stories: "codebar Stories"
     cookies: 'Cookies'
     privacy-policy: 'Privacy Policy'
   dashboard:
