--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -109,6 +109,7 @@
     becoming_sponsor: "Becoming a sponsor"
     faq: "FAQ"
     blog: "Blog"
+    codebar_stories: "codebar Stories"
   dashboard:
     join_workshops_in: "Join our <i>free</i> workshops in"
     workshops_goal: "to get to grips with the basics of programming and web development."
